samples/_failures_safe/1761531523_aac12f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8158107.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_e8158107.c:182: error: expected ‘{’ at end of input
